@@ -1,5 +1,6 @@
 package no.sikt.nva.nvi.index.report.model;
 
+import java.util.Collections;
 import java.util.List;
 
 @FunctionalInterface
@@ -11,7 +12,7 @@ public interface Row {
 
   default List<String> headers() {
     return cells().isEmpty()
-        ? List.of()
+        ? Collections.emptyList()
         : cells().stream().map(Cell::header).map(Header::name).toList();
   }
 
